syntax = "proto3";
package pingpong;
option go_package = "JuegoCeN/proto;pingpong";

message GameAction {
  string player_id = 1;
  string move      = 2;
  string room_code = 3;
}

message Vector {
  float X = 1;
  float Y = 2;
}

message GameState {
  string   room_code = 1;
  Vector   Ball      = 2;
  Vector   Paddle1   = 3;
  Vector   Paddle2   = 4;
  int32    Score1    = 5;
  int32    Score2    = 6;
  string   player_id = 7;
}

service PingPong {
  rpc Play(stream GameAction) returns (stream GameState);
}
